Update Telegram and credits in workflow file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,8 +53,8 @@ jobs:
           ║        AVICA RDP CONNECTION          ║  
           ╚══════════════════════════════════════╝
           
-          📱 Telegram : @Pro_Hacker
-          👨‍💻 Credits : @MenghwarSaHiB 
+          📱 Telegram : @TheNetworkZoneOfficial
+          👨‍💻 Credits : @PiroYadav & @TheYadavNetwork
           
           📋 Instructions:
           • Go to the GoFile link that will appear below
